--- a/package.json
+++ b/package.json
@@ -14,15 +14,20 @@
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
-    "expo": "^32.0.0",
-    "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
-    "react-navigation": "^3.0.9",
+    "@expo/vector-icons": "^10.0.5",
+    "expo": "^33.0.0",
+    "expo-asset": "^7.0.0",
+    "expo-constants": "^5.0.1",
+    "expo-font": "^5.0.1",
+    "expo-permissions": "^5.0.1",
+    "react": "16.8.3",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
+    "react-navigation": "^3.11.0",
     "victory-native": "^32.0.2"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
-    "jest-expo": "32.0.0",
+    "jest-expo": "33.0.0",
     "@types/expo": "^32.0.8",
     "@types/react": "^16.8.8",
     "@types/react-native": "^0.57.40",
