--- a/package.json
+++ b/package.json
@@ -15,20 +15,22 @@
   "dependencies": {
     "@expo/samples": "2.1.1",
     "@expo/vector-icons": "^10.0.5",
-    "expo": "^33.0.0",
-    "expo-asset": "^7.0.0",
-    "expo-constants": "^5.0.1",
-    "expo-font": "^5.0.1",
-    "expo-permissions": "^5.0.1",
+    "expo": "^34.0.3",
+    "expo-asset": "~6.0.0",
+    "expo-constants": "~6.0.0",
+    "expo-font": "~6.0.1",
+    "expo-permissions": "~6.0.0",
     "react": "16.8.3",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
-    "react-navigation": "^3.11.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
+    "react-native-gesture-handler": "1.3.0",
+    "react-native-reanimated": "^1.1.0",
+    "react-native-svg": "^9.5.3",
+    "react-navigation": "^3.11.1",
     "victory-native": "^32.0.2"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
-    "jest-expo": "33.0.0",
-    "@types/expo": "^32.0.8",
+    "jest-expo": "34.0.0",
     "@types/react": "^16.8.8",
     "@types/react-native": "^0.57.40",
     "@types/react-navigation": "^3.0.5"
