--- a/package.json
+++ b/package.json
@@ -13,26 +13,25 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/samples": "2.1.1",
-    "@expo/vector-icons": "^10.0.5",
-    "expo": "^34.0.3",
-    "expo-asset": "~6.0.0",
-    "expo-constants": "~6.0.0",
-    "expo-font": "~6.0.1",
-    "expo-permissions": "~6.0.0",
+    "@expo/vector-icons": "^10.0.0",
+    "expo": "^35.0.0",
+    "expo-asset": "~7.0.0",
+    "expo-constants": "~7.0.0",
+    "expo-font": "~7.0.0",
+    "expo-permissions": "~7.0.0",
     "react": "16.8.3",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
-    "react-native-gesture-handler": "1.3.0",
-    "react-native-reanimated": "^1.1.0",
-    "react-native-svg": "^9.5.3",
-    "react-navigation": "^3.11.1",
-    "victory-native": "^32.0.2"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.3.0",
+    "react-native-reanimated": "~1.2.0",
+    "react-native-svg": "9.9.5",
+    "react-navigation": "^3.13.0",
+    "victory-native": "^34.0.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0",
-    "jest-expo": "34.0.0",
-    "@types/react": "^16.8.8",
-    "@types/react-native": "^0.57.40",
-    "@types/react-navigation": "^3.0.5"
+    "babel-preset-expo": "^7.0.0",
+    "jest-expo": "^35.0.0",
+    "@types/react": "^16.8.23",
+    "@types/react-native": "^0.57.65",
+    "@types/react-navigation": "^3.0.8"
   }
 }
