--- a/package.json
+++ b/package.json
@@ -14,26 +14,30 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.0",
-    "expo": "^36.0.0",
-    "expo-asset": "~8.0.0",
-    "expo-constants": "~8.0.0",
-    "expo-font": "~8.0.0",
-    "expo-permissions": "~8.0.0",
+    "expo": "^37.0.0",
+    "expo-asset": "~8.1.4",
+    "expo-constants": "~9.0.0",
+    "expo-font": "~8.1.0",
+    "expo-permissions": "~8.1.0",
     "react": "16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
-    "react-native-gesture-handler": "~1.5.0",
-    "react-native-reanimated": "~1.4.0",
-    "react-native-svg": "9.13.3",
-    "react-navigation": "~4.0.10",
-    "react-navigation-stack": "~1.10.3",
-    "react-navigation-tabs": "~2.6.2",
-    "victory-native": "^34.0.0"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-reanimated": "~1.7.0",
+    "react-native-safe-area-context": "0.7.3",
+    "react-native-safe-area-view": "^1.1.1",
+    "react-native-screens": "^2.2.0",
+    "react-native-svg": "11.0.1",
+    "react-navigation": "^4.3.9",
+    "react-navigation-stack": "^2.4.0",
+    "react-navigation-tabs": "^2.8.13",
+    "victory-native": "^34.0.0",
+    "@react-native-community/masked-view": "0.1.6"
   },
   "devDependencies": {
-    "babel-preset-expo": "^8.0.0",
-    "jest-expo": "^36.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-native": "^0.60.15",
-    "@types/react-navigation": "^3.0.8"
+    "@types/react": "^16.9.11",
+    "@types/react-native": "^0.60.22",
+    "@types/react-navigation": "^3.4.0",
+    "babel-preset-expo": "^8.1.0",
+    "jest-expo": "^37.0.0"
   }
 }
